--- a/myDigitalCv/index.html
+++ b/myDigitalCv/index.html
@@ -1,1 +1,379 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>islam osman</title>
+
+    <!-- title icon -->
+    <link rel="shortcut icon" href="img/my-photo.png" />
+
+    <!-- css style sheet file -->
+    <link rel="stylesheet" href="css/style.css">
+
+    <!-- normaliz css file -->
+    <link rel="stylesheet" href="css/normaliz.css">
+
+    <!-- all min css file -->
+    <link rel="stylesheet" href="css/all.min.css">
+
+    <!-- font aswsome  -->
+    <script src="https://kit.fontawesome.com/1284c12520.js" crossorigin="anonymous"></script>
+
+    <!-- aos style css file -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+
+</head>
+
+<body onload="myloading()">
+
+    <!-- start loading section -->
+    <div id="loading"></div>
+    <!-- end loading section -->
+
+    <!-- start header -->
+    <div class="header">
+        <div class="container">
+
+            <a href="index.html">
+                <img class="logo" src="img/logo.png" alt="logo">
+            </a>
+
+            <div id="myNav" class="icon">
+                <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                <div class="overlay-content">
+                    <a href="index.html">Home</a>
+                    <a href="#about">About</a>
+                    <a href="#skills">Skills</a>
+                    <a href="#Portofolio">Portofolio</a>
+                    <a href="#testimonials">Testimonials</a>
+                    <a href="#contact">Contact</a>
+                </div>
+            </div>
+
+
+            <span id="open" style="font-size:30px;cursor:pointer; color: black;" onclick="openNav()"> Menu &#9776;
+                </Menu>
+            </span>
+        </div>
+    </div>
+    <!-- end header -->
+
+    <!-- start welcome section -->
+    <div class="wel">
+        <div class="container">
+            <div class="welcome-message">
+                <p>Hi, i'm islam osman</p>
+                <h1>I'm a <span class="typed-text"></span> </span><span class="cursor">&nbsp;</span></h1>
+
+                <p class="motivation">High level experience in web development, design
+                    knowladge, and problem solving</p>
+
+                <button download>Download CV</button>
+            </div>
+
+            <div class="my-photo">
+                <img src="img/my-photo.png" alt="my-photo">
+
+            </div>
+        </div>
+    </div>
+    <!-- end welcome section -->
+
+    <!-- start about section -->
+    <div class="about" id="about">
+        <div class="container">
+            <div class="ph">
+                <h2>About Me</h2>
+                <img src="img/4.png" alt="photo for me">
+            </div>
+
+            <div class="text">
+                <p>With a Marketing background, I've come to a conclusion of what's best for the different companies to
+                    target and attract their customers. Providing them with an interactive platforms to present them in
+                    front of their customers.
+                    I've worked with several different languages <span> (JavaScript, OOP, HTML, CSS, SASS, React,
+                        jQuery, Ajax,
+                        Bootstrap) </span> and built an experience in developing interactive platforms that generates
+                    benefits for
+                    your company.
+                    <span>"Develop your life to achieve your goals"</span>
+                </p>
+            </div>
+        </div>
+    </div>
+    <!-- end about section -->
+
+    <!-- start skills section -->
+    <section class="section skills" id="skills">
+        <div class="container">
+            <div class="row responsive">
+                <div class="col-md-12">
+                    <div class="skills_section text-center">
+                        <div class="skill-head">
+                            <h1 class="font-60">
+                                My Skills
+                            </h1>
+
+                        </div>
+
+                        <div class="skills-area">
+                            <div class="single-skill">
+                                <div class="circlechart" data-percentage="92"><svg class="circle-chart"
+                                        viewBox="0 0 33.83098862 33.83098862" xmlns="http://www.w3.org/2000/svg">
+                                        <circle class="circle-chart__background" cx="16.9" cy="16.9" r="15.9"></circle>
+                                        <circle class="circle-chart__circle success-stroke" stroke-dasharray="92,100"
+                                            cx="16.9" cy="16.9" r="15.9"></circle>
+                                        <g class="circle-chart__info"> <text class="circle-chart__percent" x="17.9"
+                                                y="15.5">92%</text><text class="circle-chart__subline" x="16.91549431"
+                                                y="22">
+                                                HTML5
+                                            </text> </g>
+                                    </svg></div>
+                            </div>
+                            <div class="single-skill">
+                                <div class="circlechart" data-percentage="90"><svg class="circle-chart"
+                                        viewBox="0 0 33.83098862 33.83098862" xmlns="http://www.w3.org/2000/svg">
+                                        <circle class="circle-chart__background" cx="16.9" cy="16.9" r="15.9"></circle>
+                                        <circle class="circle-chart__circle success-stroke" stroke-dasharray="90,100"
+                                            cx="16.9" cy="16.9" r="15.9"></circle>
+                                        <g class="circle-chart__info"> <text class="circle-chart__percent" x="17.9"
+                                                y="15.5">90%</text><text class="circle-chart__subline" x="16.91549431"
+                                                y="22">
+                                                CSS3
+                                            </text> </g>
+                                    </svg></div>
+                            </div>
+                            <div class="single-skill">
+                                <div class="circlechart" data-percentage="85"><svg class="circle-chart"
+                                        viewBox="0 0 33.83098862 33.83098862" xmlns="http://www.w3.org/2000/svg">
+                                        <circle class="circle-chart__background" cx="16.9" cy="16.9" r="15.9"></circle>
+                                        <circle class="circle-chart__circle success-stroke" stroke-dasharray="85,100"
+                                            cx="16.9" cy="16.9" r="15.9"></circle>
+                                        <g class="circle-chart__info"> <text class="circle-chart__percent" x="17.9"
+                                                y="15.5">85%</text><text class="circle-chart__subline" x="16.91549431"
+                                                y="22">
+                                                Bootstrap
+                                            </text> </g>
+                                    </svg></div>
+                            </div>
+                            <div class="single-skill">
+                                <div class="circlechart" data-percentage="82"><svg class="circle-chart"
+                                        viewBox="0 0 33.83098862 33.83098862" xmlns="http://www.w3.org/2000/svg">
+                                        <circle class="circle-chart__background" cx="16.9" cy="16.9" r="15.9"></circle>
+                                        <circle class="circle-chart__circle success-stroke" stroke-dasharray="82,100"
+                                            cx="16.9" cy="16.9" r="15.9"></circle>
+                                        <g class="circle-chart__info"> <text class="circle-chart__percent" x="17.9"
+                                                y="15.5">82%</text><text class="circle-chart__subline" x="16.91549431"
+                                                y="22">
+                                                Js/Jquery
+                                            </text> </g>
+                                    </svg></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- end skills section -->
+
+    <!-- start Portofolio section -->
+    <section class="filter" id="Portofolio">
+        <h1>Portofolio</h1>
+        <div class="container-filter">
+            <div class="row">
+                <div class="gallery-filter">
+                    <span class="filter-item active" data-filter="all">All</span>
+                    <span class="filter-item" data-filter="mobile">mobile</span>
+                    <span class="filter-item" data-filter="web-development">web development</span>
+                    <span class="filter-item" data-filter="wordpress">wordpress</span>
+                </div>
+            </div>
+
+            <div class="row">
+
+                <!-- gallery item start -->
+                <div class="gallery-item wordpress">
+                    <div class="gallery-item-inner">
+                        <img src="img/pro-5.png" alt="wordpress">
+                        <div class="over text-center">
+                            <h4 class="upper">clinc Website</h4>
+                            <p>this Website for clinc <br> i used wordpress and created plugins</p>
+                            <a href="#"><button class="upper">Show Project</button></a>
+                        </div>
+
+                    </div>
+                </div>
+                <!-- gallery item end -->
+
+                <!-- gallery item start -->
+                <div class="gallery-item mobile">
+                    <div class="gallery-item-inner">
+                        <img src="img/pro-6.png" alt="mobile">
+                        <div class="over text-center">
+                            <h4 class="upper">snack Website</h4>
+                            <p>this Website for snack restaurant <br> i created this site for restaurant in turkey from
+                                scrach</p>
+                            <a href="https://www.chipsyist.com/" target="https://www.chipsyist.com/"><button
+                                    class="upper">Show Project</button></a>
+                        </div>
+
+                    </div>
+                </div>
+                <!-- gallery item end -->
+
+                <!-- gallery item start -->
+                <div class="gallery-item web-development">
+                    <div class="gallery-item-inner">
+                        <img src="img/pro-1.png" alt="mobile">
+                        <div class="over text-center">
+                            <h4 class="upper">berber Website</h4>
+                            <p>this Website for berber in turkey <br> i created this site from scrach with turkish
+                                language</p>
+                            <a href="https://imaj.netlify.app/" target="https://imaj.netlify.app/"><button
+                                    class="upper">Show Project</button></a>
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="gallery-item web-development">
+                    <div class="gallery-item-inner">
+                        <img src="img/pro-2.png" alt="mobile">
+                        <div class="over text-center">
+                            <h4 class="upper">alaa Website</h4>
+                            <p>this Website for singer <br> used a lot of media and also responsive design</p>
+                            <a href="https://alaa-abdo.netlify.app/" target="https://alaa-abdo.netlify.app/"> <button
+                                    class="upper">Show Project</button></a>
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="gallery-item web-development">
+                    <div class="gallery-item-inner">
+                        <img src="img/pro-3.png" alt="mobile">
+                        <div class="over text-center">
+                            <h4 class="upper">pole fitniss Website</h4>
+                            <p>this is for pole danceing <br>from scrach and responsive design</p>
+                            <a href="https://pole-fitness.netlify.app/"
+                                target="https://pole-fitness.netlify.app/"><button class="upper">Show
+                                    Project</button></a>
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="gallery-item web-development">
+                    <div class="gallery-item-inner">
+                        <img src="img/pro-4.png" alt="mobile">
+                        <div class="over text-center">
+                            <h4 class="upper">solution Website</h4>
+                            <p>solution site for softwar <br> from scrach and responsive design</p>
+                            <a href="https://web-solution.netlify.app/"
+                                target="https://web-solution.netlify.app/"><button class="upper">Show
+                                    Project</button></a>
+
+                        </div>
+
+                    </div>
+                </div>
+                <!-- gallery item end -->
+
+            </div>
+        </div>
+    </section>
+
+    <!-- start Portofolio section -->
+
+    <!-- Start Testimonials -->
+    <div class="testimonials" id="testimonials">
+        <h2>Testimonials</h2>
+        <div class="container">
+            <div class="ts-box">
+                <p>Iam very happy with the product its amazing and i recieve it very fast and the price was amazing.</p>
+                <h4>Ahmed Mosaad</h4>
+                <p class="pos">CEO At Company</p>
+            </div>
+
+            <div class="ts-box">
+                <p>Iam very happy with the product its amazing and i recieve it very fast and the price was amazing.</p>
+                <h4>Mohamed Ibrahim</h4>
+                <p class="pos">CEO At Company</p>
+            </div>
+            <div class="ts-box">
+                <p>Iam very happy with the product its amazing and i recieve it very fast and the price was amazing.</p>
+                <h4>Sherief Ashraf</h4>
+                <p class="pos">CEO At Company</p>
+            </div>
+        </div>
+
+    </div>
+    <!-- End Testimonials -->
+
+    <!-- start footer section -->
+    <footer>
+        <div class="all-ft">
+            <div class="contact" id="contact">
+                <p class="addres">
+                    Amstelstraat 9, 7103 JP Winterswijk
+                </p>
+
+                <p class="mail"><a href="mailto:eslameltaieb74@gmail.com?subject=contact">eslameltaieb74@gmail.com</a>
+                </p>
+
+                <p class="phone">+31 6 87662118</p>
+            </div>
+
+            <div class="social">
+                <h2>follow me</h2>
+                <a href="#"><i class="fa-brands fa-facebook" title="facebook" alt="facebook"></i></a>
+                <a href="#"><i class="fa-brands fa-instagram-square" title="isntagram" alt="instagram"></i></a>
+                <a href="#"><i class="fa-brands fa-twitter-square" title="twitter" alt="twitter"></i></a>
+            </div>
+
+            <div class="links">
+                <p><a href="#about">About</a></p>
+                <p><a href="#skills">Skills</a></p>
+                <p><a href="#porofolio">Portofolio</a></p>
+                <p><a href="#testimonials">testimonials</a></p>
+                <p><a href="#contact">contact </a></p>
+            </div>
+
+            <div class="sub">
+                <form action="mailto:eslameltaieb74@gmail.com">
+                    <label for="fname"> Name:</label>
+                    <input type="text" id="name" name="name" placeholder="islam"><br><br>
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" placeholder="eslameltaieb74@gmail.com"><br><br>
+                    <input class="btn" type="submit" value="Submit">
+                </form>
+            </div>
+        </div>
+        <p class="res">all copyrights reserved &copy; 2022 by <span>islam osman</span> </p>
+    </footer>
+    <!-- end footer section -->
+
+
+    <!-- js file -->
+
+    <script src="js/script.js"></script>
+
+
+    <!-- start loading section -->
+    <script>
+
+        var preloader = document.getElementById("loading");
+
+        function myloading() {
+            preloader.style.display = "none";
+        }
+    </script>
+
+</body>
+
+</html>
